--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="wrap">
   <section class="hero">
-    <span class="badge">東京〇店同時開催｜2026.1–3</span>
+    <span class="badge">東京全店同時開催｜2026.1–3</span>
     <h1>がんばるあなたに、<br>肌のごほうび定期。</h1>
     <p class="sub">定期券を見せるだけで、サンプル進呈や店頭体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
