--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="hero">
     <span class="badge">東京全店同時開催｜2026.1–3</span>
     <h1>がんばるあなたに、<br>肌のごほうび定期。</h1>
-    <p class="sub">定期券を見せるだけで、サンプル進呈や店頭体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
+    <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
     <div class="hero-cta">
       <button class="btn" id="copyTags" aria-label="ハッシュタグをコピー">＃タグをコピー</button>
@@ -114,9 +114,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h2>参加方法</h2>
         <ol class="list">
           <li><span class="num">1</span><span>対象店舗で<strong>定期券を提示</strong>（Suica／PASMOなど）。</span></li>
-          <li><span class="num">2</span><span>店頭POPの<strong>QRコード</strong>を読み取り、ガイドに沿って投稿準備。</span></li>
-          <li><span class="num">3</span><span>Instagram または X に <b>#ごほうび定期 #クロロフイル</b> を付けて投稿。</span></li>
-          <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプル or ポイント）。</span></li>
+          <li><span class="num">2</span><span>店頭POPの<strong>QRコード</strong>を読み取り、このホームページを開く。</span></li>
+          <li><span class="num">3</span><span>ボタンを押してInstagram または X に <b>#ごほうび定期 #クロロフイル</b> を付けて投稿。</span></li>
+          <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
         </ol>
         <div class="copybox">
           <input class="input" id="caption" value="今日のごほうびはクロロフイルで肌リセット✨ #ごほうび定期 #クロロフイル" aria-label="投稿文例">
@@ -244,12 +244,3 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     });
 
     // ③ Xはハッシュタグのみ（中略防止に末尾スペース）
-    if (tweetBtn) {
-      const encoded = encodeURIComponent(TAGS + " ");
-      tweetBtn.href = "https://twitter.com/intent/tweet?text=" + encoded;
-    }
-
-    // ④ Instagram起動
-    instaBtn?.addEventListener('click', tryOpenInstagram);
-  });
-</script>
