--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
 
-        <h3 style="margin-top:18px">開催スケジュール</h3>
-        <div class="kpis">
-          <div class="kpi"><b>1月</b><div>サンプルごほうび</div></div>
-          <div class="kpi"><b>2月</b><div>うるおいごほうび（体験）</div></div>
-          <div class="kpi"><b>3月</b><div>SNSコンテスト</div></div>
-        </div>
-      </aside>
+        <h3>開催スケジュール</h3>
+    <div class="kpi schedule-box">
+      <div class="schedule-title"><b>3月1日〜4月30日まで</b></div>
+      <div class="schedule-desc">お肌に合ったお手入れ体験！サンプルや抽選で当たるお手入れもしくは2500円分の商品券も！</div>
     </div>
+  </aside>
+</div>
+
 
     <section class="card" style="margin-top:18px">
       <h2>3月：SNSコンテスト（Instagram＋X）</h2>
