--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="wrap">
   <section class="hero">
-    <span class="badge">東京全店同時開催｜2026.1–3</span>
+    <span class="badge">関東11教室同時開催｜2026.1–3</span>
     <h1>がんばるあなたに、<br>肌のごほうび定期。</h1>
     <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
         </ol>
         <div class="copybox">
-          <input class="input" id="caption" value="今日のごほうびはクロロフイルで肌リセット✨ #ごほうび定期 #クロロフイル" aria-label="投稿文例">
+          <input class="input" id="caption" value="ごほうびはクロロフイルで肌リセット✨ #ごほうび定期 #クロロフイル" aria-label="投稿文例">
           <button class="btn secondary" id="copyCaption">投稿文例をコピー</button>
         </div>
         <p class="legal">※ Instagramは仕様上、投稿画面に自動で文字を差し込めません。ボタンでハッシュタグをコピー後、アプリ側で貼り付けてください。</p>
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
 
-        <h3>開催スケジュール</h3>
+　　　<h3>開催スケジュール</h3>
     <div class="kpi schedule-box">
       <div class="schedule-title"><b>3月1日〜4月30日まで</b></div>
       <div class="schedule-desc">お肌に合ったお手入れ体験！サンプルや抽選で当たるお手入れもしくは2500円分の商品券も！</div>
@@ -151,11 +151,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="card" style="margin-top:18px">
       <h2>3月：SNSコンテスト（Instagram＋X）</h2>
       <ul class="list">
-        <li><span class="num">1</span><span><b>Instagram賞：</b>映え投稿を公式が選定</span></li>
-        <li><span class="num">2</span><span><b>X賞：</b>いいね／RT上位＋公式チェック</span></li>
+        <li><span class="num">1</span><span><b>Instagram映えフォト賞：</b>映え投稿を公式が選定</span></li>
+        <li><span class="num">2</span><span><b>Xバズポスト賞：</b>いいね／RT上位＋公式チェック</span></li>
         <li><span class="num">3</span><span><b>抽選賞：</b>投稿者全員からランダム</span></li>
       </ul>
-      <p class="legal">集計はハッシュタグ検索＋スクリーンショット保存で行います。非表示設定の方はスクリーンショット提出をお願いする場合があります。</p>
+      <p class="legal">集計はハッシュタグ検索＋スクリーンショット保存で行います。鍵アカウント、公序良俗に反する内容の投稿は対象外とさせて頂きます。</p>
     </section>
 
     <section class="card" style="margin-top:18px">
@@ -243,7 +243,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         .catch(()=> alert('コピーできませんでした。手動で選択してください。'));
     });
 
-     // ③ Xはハッシュタグのみ（中略防止に末尾スペース）
+    // ③ Xはハッシュタグのみ（中略防止に末尾スペース）
     if (tweetBtn) {
       const encoded = encodeURIComponent(TAGS + " ");
       tweetBtn.href = "https://twitter.com/intent/tweet?text=" + encoded;
