--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="wrap">
   <section class="hero">
-    <span class="badge">関東11教室同時開催｜2026.1–3</span>
+    <span class="badge">関東11教室同時開催｜2026.3–4</span>
     <h1>がんばるあなたに、<br>肌のごほうび定期。</h1>
     <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
@@ -113,7 +113,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <section class="card" id="howto">
         <h2>参加方法</h2>
         <ol class="list">
-          <li><span class="num">1</span><span>対象店舗で<strong>定期券を提示</strong>（Suica／PASMOなど）。</span></li>
+          <li><span class="num">1</span><span>対象店舗で<strong>定期券を提示</strong>（Suica／PASMOなどICカード定期券/モバイル定期券を含む）。</span></li>
           <li><span class="num">2</span><span>店頭POPの<strong>QRコード</strong>を読み取り、このホームページを開く。</span></li>
           <li><span class="num">3</span><span>ボタンを押してInstagram または X に <b>#ごほうび定期 #クロロフイル</b> を付けて投稿。</span></li>
           <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <section class="card" style="margin-top:18px">
-      <h2>3月：SNSコンテスト（Instagram＋X）</h2>
+      <h2>5月：SNSコンテスト（Instagram＋X）結果発表！</h2>
       <ul class="list">
         <li><span class="num">1</span><span><b>Instagram映えフォト賞：</b>映え投稿を公式が選定</span></li>
         <li><span class="num">2</span><span><b>Xバズポスト賞：</b>いいね／RT上位＋公式チェック</span></li>
