--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
         </ol>
         <div class="copybox">
-          <input class="input" id="caption" value="ごほうび定期で、肌も心もうるおう🌿#ごほうび定期 #クロロフイル" aria-label="投稿文例">
+          <input class="input" id="caption" value="ごほうび定期で、うるおいタイム🌿#ごほうび定期 #クロロフイル" aria-label="投稿文例">
           <button class="btn secondary" id="copyCaption">投稿文例をコピー</button>
         </div>
         <p class="legal">※ Instagramは仕様上、投稿画面に自動で文字を差し込めません。ボタンでハッシュタグをコピー後、アプリ側で貼り付けてください。</p>
