--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>がんばるあなたに、肌のごほうび定期｜キャンペーン</title>
+<title>がんばるあなたに、もっとお肌のごほうびを。ごほうび定期SNSコンテスト｜キャンペーン</title>
 <meta name="description" content="定期券提示でスキンケアのごほうび。#ごほうび定期 #クロロフイル を付けて投稿しよう。">
 
 <style>
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wrap">
   <section class="hero">
     <span class="badge">関東11教室同時開催｜2026.3–4</span>
-    <h1>がんばるあなたに、<br>肌のごほうび定期。</h1>
+    <h1>がんばるあなたに、もっとお肌のごほうびを<br>ごほうび定期SNSコンテスト</h1>
     <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
     <div class="hero-cta">
@@ -119,31 +119,41 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
         </ol>
         <div class="copybox">
-          <input class="input" id="caption" value="ごほうび定期で、うるおいタイム🌿#ごほうび定期 #クロロフイル" aria-label="投稿文例">
+          <input class="input" id="caption" value="ごほうび定期で、うるおいタイム🌿 #ごほうび定期 #クロロフイル" aria-label="投稿文例">
           <button class="btn secondary" id="copyCaption">投稿文例をコピー</button>
         </div>
         <p class="legal">※ Instagramは仕様上、投稿画面に自動で文字を差し込めません。ボタンでハッシュタグをコピー後、アプリ側で貼り付けてください。</p>
+　　　<h3>開催スケジュール</h3>
+    <div class="kpi schedule-box">
+      <div class="schedule-title"><b>3月1日〜4月30日まで</b></div>
+      <div class="schedule-desc">お肌に合ったお手入れを無料で体験！サンプルや抽選で当たるお手入れもしくは2500円分の商品券も！</div>
+    </div>
       </section>
 
       <aside class="card">
-        <h3>店頭QRからできること</h3>
+        <h3>このページからできること</h3>
         <div class="qrbox">
           <div class="qr">QR</div>
           <div>
             <ul class="list">
-              <li><span class="num">A</span><span>ハッシュタグをワンタップコピー</span></li>
-              <li><span class="num">B</span><span>Xのツイート作成（タグ自動挿入）を起動</span></li>
-              <li><span class="num">C</span><span>Instagram投稿の手順を見る（コピー→アプリ起動）</span></li>
+              <li><span class="num">A</span><span>♯タグをコピー<br>
+<small>→ 投稿に使う「#ごほうび定期」　　「♯クロロフイル」ハッシュタグをワンタップでコピーできます。</small></span></li>
+              <li><span class="num">B</span><span> Xで投稿（タグ自動挿入）<br>
+  <small>→ タップするとXの投稿画面が開きハッシュタグが自動で入ります。</small></span></li>
+              <li><span class="num">C</span><span>Instagramで投稿する<br>
+      <small>→ タップするとハッシュタグを　　コピーしInstagramアプリが自動で開きます。<br>
+      投稿画面でキャプション欄を長押しして貼り付けてください。</small></span></li>
+              <li><span class="num">D</span><span>参加方法を見る<br>
+      <small>→ タップするとキャンペーンの　　参加方法が見られます。<br>
+      投稿文例を直接コピーするか、　　「投稿文例をコピー」をタップで　すぐに投稿できるおすすめ文例を　コピーできます。</small>
+    </span>
+  </li>
             </ul>
-            <p class="legal">※ 実運用ではこの枠に実際のQR画像を配置してください。</p>
+            <p class="legal">※ コピーやアプリが開かない場合は、テキストを長押しして手動でコピーしてください。<br>
+※ ご利用の端末やブラウザ環境により動作が異なる場合があります。</p>
           </div>
         </div>
 
-　　　<h3>開催スケジュール</h3>
-    <div class="kpi schedule-box">
-      <div class="schedule-title"><b>3月1日〜4月30日まで</b></div>
-      <div class="schedule-desc">お肌に合ったお手入れ体験！サンプルや抽選で当たるお手入れもしくは2500円分の商品券も！</div>
-    </div>
   </aside>
 </div>
 
