--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wrap">
   <section class="hero">
     <span class="badge">関東11教室同時開催｜2026.3–4</span>
-    <h1>がんばるあなたに、もっとお肌のごほうびを<br>ごほうび定期SNSコンテスト</h1>
+    <h1>がんばるあなたに<br>もっとお肌の<br>ごほうびを</h1>
     <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
 
     <div class="hero-cta">
@@ -137,15 +137,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div>
             <ul class="list">
               <li><span class="num">A</span><span>♯タグをコピー<br>
-<small>→ 投稿に使う「#ごほうび定期」　　「♯クロロフイル」ハッシュタグをワンタップでコピーできます。</small></span></li>
+<small>→ 投稿に使う「#ごほうび定期」「♯クロロフイル」ハッシュタグをワンタップでコピーできます。</small></span></li>
               <li><span class="num">B</span><span> Xで投稿（タグ自動挿入）<br>
   <small>→ タップするとXの投稿画面が開きハッシュタグが自動で入ります。</small></span></li>
               <li><span class="num">C</span><span>Instagramで投稿する<br>
-      <small>→ タップするとハッシュタグを　　コピーしInstagramアプリが自動で開きます。<br>
+      <small>→ タップするとハッシュタグをコピーしInstagramアプリが自動で開きます。<br>
       投稿画面でキャプション欄を長押しして貼り付けてください。</small></span></li>
               <li><span class="num">D</span><span>参加方法を見る<br>
-      <small>→ タップするとキャンペーンの　　参加方法が見られます。<br>
-      投稿文例を直接コピーするか、　　「投稿文例をコピー」をタップで　すぐに投稿できるおすすめ文例を　コピーできます。</small>
+      <small>→ タップするとキャンペーンの参加方法が見られます。<br>
+      投稿文例を直接コピーするか、「投稿文例をコピー」をタップですぐに投稿できるおすすめ文例をコピーできます。</small>
     </span>
   </li>
             </ul>
