--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>がんばるあなたに、もっとお肌のごほうびを。ごほうび定期SNSコンテスト｜キャンペーン</title>
-<meta name="description" content="定期券提示でスキンケアのごほうび。#ごほうび定期 #クロロフイル を付けて投稿しよう。">
+<meta name="description" content="定期券提示でスキンケアのごほうび。#ごほうび定期 #クロロフイル #キャンペーン参加中　を付けて投稿しよう!">
 
 <style>
   :root{
@@ -78,8 +78,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wrap">
   <section class="hero">
     <span class="badge">関東11教室同時開催｜2026.3–4</span>
-    <h1>がんばるあなたに<br>もっとお肌の<br>ごほうびを</h1>
-    <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b> を付けて参加！</p>
+    <h1>がんばるあなたに、<br>もっとお肌の<br>ごほうびを</h1>
+    <p class="sub">定期券を見せるだけで、サンプル進呈や無料美容体験。<br>投稿時は <b>#ごほうび定期</b> と <b>#クロロフイル</b>、 <b>#キャンペーン参加中</b> を付けて参加！</p>
 
     <div class="hero-cta">
       <button class="btn" id="copyTags" aria-label="ハッシュタグをコピー">＃タグをコピー</button>
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- X投稿ボタン -->
       <a class="btn secondary" 
          id="tweetBtn"
-         href="https://twitter.com/intent/tweet?text=%23ごほうび定期%20%23クロロフイル"
+         href="https://twitter.com/intent/tweet?text=%23ごほうび定期%20%23クロロフイル%20%23キャンペーン参加中"
          target="_blank" rel="noopener">
          Xで投稿（タグ自動挿入）
       </a>
@@ -106,6 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="hashtags">
       <span class="tag">#ごほうび定期</span>
       <span class="tag">#クロロフイル</span>
+      <span class="tag">#キャンペーン参加中</span>
     </div>
   </section>
 
@@ -115,11 +116,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <ol class="list">
           <li><span class="num">1</span><span>対象店舗で<strong>定期券を提示</strong>（Suica／PASMOなどICカード定期券/モバイル定期券を含む）。</span></li>
           <li><span class="num">2</span><span>店頭POPの<strong>QRコード</strong>を読み取り、このホームページを開く。</span></li>
-          <li><span class="num">3</span><span>ボタンを押してInstagram または X に <b>#ごほうび定期 #クロロフイル</b> を付けて投稿。</span></li>
+          <li><span class="num">3</span><span>ボタンを押してInstagram または X に <b>#ごほうび定期 #クロロフイル #キャンペーン参加中</b> を付けて投稿。</span></li>
           <li><span class="num">4</span><span>投稿画面をスタッフに提示で<strong>追加特典</strong>（サンプルプレゼント）。</span></li>
         </ol>
         <div class="copybox">
-          <input class="input" id="caption" value="ごほうび定期で、うるおいタイム🌿 #ごほうび定期 #クロロフイル" aria-label="投稿文例">
+          <input class="input" id="caption" value="ごほうび定期で、うるおいタイム🌿 #ごほうび定期 #クロロフイル #キャンペーン参加中" aria-label="投稿文例">
           <button class="btn secondary" id="copyCaption">投稿文例をコピー</button>
         </div>
         <p class="legal">※ Instagramは仕様上、投稿画面に自動で文字を差し込めません。ボタンでハッシュタグをコピー後、アプリ側で貼り付けてください。</p>
@@ -137,7 +138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div>
             <ul class="list">
               <li><span class="num">A</span><span>♯タグをコピー<br>
-<small>→ 投稿に使う「#ごほうび定期」「♯クロロフイル」ハッシュタグをワンタップでコピーできます。</small></span></li>
+<small>→ 投稿に使う「#ごほうび定期」「♯クロロフイル」「♯キャンペーン参加中」ハッシュタグをワンタップでコピーできます。</small></span></li>
               <li><span class="num">B</span><span> Xで投稿（タグ自動挿入）<br>
   <small>→ タップするとXの投稿画面が開きハッシュタグが自動で入ります。</small></span></li>
               <li><span class="num">C</span><span>Instagramで投稿する<br>
@@ -184,8 +185,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <script>
-  const TAGS = "#ごほうび定期 #クロロフイル";
-  const CAPTION_TEXT = "今日のごほうびはクロロフイルで肌リセット✨ #ごほうび定期 #クロロフイル";
+  const TAGS = "#ごほうび定期 #クロロフイル #キャンペーン参加中";
+  const CAPTION_TEXT = "今日のごほうびはクロロフイルで肌リセット✨ #ごほうび定期 #クロロフイル #キャンペーン参加中";
 
   // Instagram起動（タグを先にコピー）
   function tryOpenInstagram(){
